assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

:root {
    --color-main: #403D58;
    --color-secondary: #dea584;
}

html,
body {
    box-sizing: border-box;
    font: 18px/1.65 monospace;
}

a {
    color: var(--color-main);
    font-weight: bold;
}

.footer a,
.author a,
.intro-text a {
    color: var(--color-secondary);
    font-weight: bold;
}

.fg-accent {
    color: var(--color-secondary);
}

.x-small {
    font-size: .85rem;
}

.xx-small {
    font-size: .65rem;
}

h1 {
    font-size: 2rem;
}

.article-content h2,
.article-content h3 {
    margin-top: 2rem;
}

.section-headline {
    font-size: 2.75em;
    margin-top: 2rem;
}

.section-headline, h1, h2 {
    display: inline-block;
    position: relative;
    z-index: 2;
    color: var(--color-main);
}


.section-headline::after, h1::after, h2::after {
    content: "";
    width: 100%;
    display: block;
    height: .35em;
    background: var(--color-secondary);
    bottom: .3em;
    position: absolute;
    left: 0;
    z-index: -1;
}

.intro-text {
    padding: 2rem;
    background: #222;
    color: #fff;
    font-size: 140%;
}

.main,
.footer {
    max-width: 85rem;
    width: 100%;
    margin: 0 auto;
    padding: 2rem;
}

hr {
    border: none;
    background: var(--color-main);
    height: 2px;
}

.footer {
    background: #222;
    color: #fff;
}

.main {
    background: #f1f1f1;
    border: 1px solid #ddd;
    border-bottom: 0;
    min-height: 100vh;
    padding: 2rem 2rem 0;
}


.main p {
    margin-top: 1rem;
    margin-bottom: 1.5rem;
}

.exif {
    padding: .5rem;
    background: var(--color-secondary);
}

.exif li {
    display: inline-block;
    background: #333;
    color:#ccc;
    border-radius: 3px;
    padding: .125rem .5rem;
    font-size: .8rem;
}

.exif .label {
    font-size: .75rem;
}

@media all and (max-width: 800px) {
    .exif li {
        margin-top: .5rem;
    }
}

figure img,
figure picture {
    margin: 0 auto;
    display: block;
    height: auto;
    width: auto;
    margin: 0 auto;
}

.art figure img,
.art figure picture,
.photography figure img,
.photography figure picture {
    width: auto;
    max-width: calc(100% + 2rem + 1px);
}

figcaption p {
    display: block;
    line-height: 1.65;
    background: var(--color-secondary);
    color: #fff;
    margin-top: 0;
    padding: .5rem;
    text-align: right;
    font-size: var(--font-small, .85rem);
}


figure {
    position: relative;
    z-index: 1;
    margin-left: calc(0rem - 2rem);
}

figure+figure {
    margin-top: 2rem;
}

figcaption {
    display: flex;
    justify-content: flex-end;
}

figcaption p {
    margin: 0 !important;
    background: var(--color-secondary);
    color: var(--color-main);
    font-size: .85em;
}

@media all and (min-width: 800px) {

    figure {
        width: auto;
        max-width: calc(100% + 4rem + 2px);
        margin-left: calc(0rem - 2rem - 1px);
    }

    figcaption p {
        width: 50%;
    }
}

p code,
li code {
    background: var(--color-secondary);
    color: var(--color-main);
    padding: .125rem .25rem;
    border-radius: 3px;
}

.highlight {
    margin-left: calc(0rem - 2rem);
    width: calc(100% + 4rem);
}

.nav-main {
    list-style: none;
    width: 100%;
    background: #222;
}

.nav-main li {
    display: inline-block;
    padding: .25rem 1rem;
    background: var(--color-main);
}

.nav-main li a {
    color: #fff;
    text-decoration: none;
}

.page-nav {
    width: calc(100% + 4rem);
    background: var(--color-secondary);
    margin: 2rem calc(0rem - 2rem);
    padding: 2rem;
}

.page-nav a:not(:last-of-type) {
    margin-right: .5rem;
}

.subscribe-via {
    width: calc(100% + 4rem);
    background: var(--color-main);
    color: #fff;
    margin-left: calc(0rem - 2rem);
    margin-top: -2rem;
    padding: .5rem 2rem;
}

.subscribe-via a {
    color: #fff;
}

.page-nav--label {
    display: block;
    font-size: .75em;
}

.article-content {
    padding-bottom: 2rem;
}

.article-content ol,
.article-content ul {
    margin-left: 2rem;
}

.article-list__header {
    margin-bottom: 2rem;
}

.article.article--in-list {
    padding-bottom: 1rem;
}

.article.article--in-list:not(:last-of-type) {
    margin-bottom: 2rem;
}

.article.article--in-list:not(:last-of-type):after {
    content: "";
    width: 80%;
    text-align: center;
    height: 1px;
    border-bottom: .15rem dashed var(--color-main);
    display: block;
    margin: 2rem auto 0;
}

pre {
    padding: 1rem;
    overflow: auto;
}

.tag-list__item {
    display: inline-block;
    background: var(--color-main);
    color: var(--color-secondary);
    border-radius: 3px;
    padding: .125rem .25rem;
    margin-bottom: .5rem;
}

.tag-list__item a {
    color: var(--color-secondary);
}


@media all and (min-width: 800px) {

    .footer,
    .author,
    .support {
        display: flex;
        justify-content: space-between;
    }

    .author .left,
    .support .left,
    .footer .left {
        margin-bottom: 0;
    }
}

.author .left,
.support .left,
.footer .left {
    margin-bottom: 2rem;
}

.author,
.support {
    background: var(--color-main);
    color: #fff;
    padding: 4rem 2rem;
    /* By using calc the offset only works in supporting browsers 
    Why so may numbers? 
    100% is the width of the content
    4 rem is the padding on boths sides (2rem left, 2rem right)
    2px is the border on both sides
    */
    width: calc(100% + 4rem + 2px);
    margin-left: calc(0rem - 2rem - 1px);
}

.support+.author {
    margin-top: 0rem;
}

.support {
    background: var(--color-secondary);
    color: var(--color-main);
    flex-direction: column;
}

.support a {
    color: var(--color-main);
}

.author p,
.support p {
    margin-bottom: 0;
}

@media all and (min-width: 800px) {
    .author .right {
        padding-left: 2rem;
    }

    .author .avatar {
        margin-left: 2rem;
    }
}

.author .avatar {
    max-width: 200px;
    transition: all linear 60s;
}

.author .avatar:hover {
    animation: avatar-hue linear 15s infinite;
}

@keyframes avatar-hue {
    from {
        filter: hue-rotate(0deg);
    }

    to {
        filter: hue-rotate(360deg);
    }
}

.age-note {
    background: #d46767;
    border: .35rem solid firebrick;
    padding: 1rem 2rem;
    width: calc(100% + 4rem + 2px);
    margin-left: -2rem;
    margin-top: -2rem;
    color: #222;
}

.tags-categories,
.license {
    background: #d3d3d3;
    width: calc(100% + 4rem + 2px);
    margin-left: calc(0rem - 2rem - 1px);
    padding: 2rem;
}

.side-by-side img {
    width: auto;
    max-width: 100%;
}

@media all and (min-width: 640px) {

    .tags-categories {
        display: flex;
    }

    .tags-categories .tags {
        margin-left: 2rem;
    }

    .side-by-side {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin: 2rem 0;
    }
    
    .side-by-side.align-top {
        align-items: flex-start;
    }
    
    .side-by-side.align-bottom {
        align-items: flex-end;
    }

    .side-by-side__first {
        margin-bottom: 3rem;
    }

    .side-by-side__off-left {
        margin-left: -20vw;
    }

    .side-by-side .small {
        max-width: 40%;
        padding: 2rem;
    }

    .side-by-side .bg {
        background: var(--color-main);
        color: var(--color-secondary);
    }

    .side-by-side .wide {
        max-width: 60%;
    }

    .side-by-side img,
    .side-by-side figure {
        max-width: 100%;
        margin: 0;
    }
}

.note {
    background: var(--color-main);
    color: #fff;
    padding: 1rem 1rem 1rem 2rem;
    border-left: .5rem solid var(--color-secondary);
    margin: 2rem 1rem;
    width: calc(100% - 1rem)
}

.note__heading {
    font-weight: bold;
    display: block;
}

.taxonomy-list {
    display: flex;
    padding-bottom: 2rem;
    align-content: flex-end;
    justify-content: space-between;
    flex-wrap: wrap;
}

.taxonomy__item {
        width: 20%;
        height: 2rem;
        display: inline-block;
        padding: 2rem 0;
}

.taxonomy__item-inner {
    padding: 1rem;
    background: var(--color-main);
    color: var(--color-secondary);
}

.taxonomy__item a {
    color: var(--color-secondary);
}

